# yt-dlp-proxyhat

./: LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  compat.yml
examples/: basic.py
src/yt_dlp_proxyhat/: __init__.py  __main__.py  _resolve.py  proxy.py
tests/: conftest.py  test_opts.py  test_proxy_url.py  test_resolve.py
