[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-proxyhat"
version = "0.1.0"
description = "ProxyHat residential proxies for yt-dlp — unblock geo-restricted videos through residential IPs, with sticky sessions and rotation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "ProxyHat", email = "support@proxyhat.com" }]
keywords = [
    "yt-dlp",
    "youtube-dl",
    "proxy",
    "residential-proxy",
    "proxyhat",
    "geo-unblock",
    "video-downloader",
    "sticky-session",
    "rotating-proxy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Multimedia :: Video",
]
dependencies = ["proxyhat>=0.2.0"]

[project.urls]
Homepage = "https://proxyhat.com"
Documentation = "https://docs.proxyhat.com"
Repository = "https://github.com/ProxyHatCom/yt-dlp-proxyhat"

[project.optional-dependencies]
# yt-dlp is a peer/optional dependency: bring your own version. proxyhat_proxy_url()
# and proxyhat_ydl_opts() work without it; ProxyHatYoutubeDL needs it installed.
yt-dlp = ["yt-dlp>=2023.7.6"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dlp_proxyhat"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
